<resources>
    <string name="facebook_app_id">291815899513836</string>
    <string name="fb_login_protocol_scheme">fb291815899513836</string>
    <string name="facebook_client_token">01c26bdb17f4a367e2a6939e1bffb6f4</string>
    <string name="app_name">RadarQR</string>
    <string name="continue_mobile">Continue with Phone Number</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Google</string>
    <string name="whats_your">What\'s your number?</string>
    <string name="send_verification">Radar will send you a text with a verification code. Message and data rates may apply.</string>
    <string name="phone_number">Phone Number</string>
    <string name="continuee">Continue</string>
    <string name="verify_num">Verify Number</string>
    <string name="enter_phone_number">Enter you phone number</string>
    <string name="never_share">We never share this with anyone and it won\'t be on your profile.</string>
    <string name="need_to">We need to verify \nyour phone</string>
    <string name="send_code">We have sent you an SMS with a code to </string>
    <string name="terms">Terms &amp; \nConditions</string>
    <string name="dont_worry">Don\'t worry! we never post to facebook</string>
    <string name="change"><font color="#06B8A1"><b><u>Change</u></b></font></string>
    <string name="dont_get">Didn\'t get a text? <font color="#A1DFD7"><b><u>Resend</u></b></font></string>
    <string name="we_never">We never share this with anyone and it won\'t be on your profile</string>
    <string name="number"></string>
    <string name="setting">Settings</string>
    <string name="timerr"><font color="#091E31">Seconds</font></string>
    <string name="what_first">What\'s your first name?</string>
    <string name="wont_able">You won\'t be able to change this later</string>
    <string name="first_name">First Name</string>
    <string name="enter_name">Enter your First Name</string>
    <string name="littel_info">Tell us a bit about yourself…</string>
    <string name="digitss">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz </string>
    <string name="add_picture">Add Your Profile Picture</string>
    <string name="choose_a">Choose a photo where you can clearly see \nyour face. you can change this later</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="you_radar">You\'re On My Radar...</string>
    <string name="power_by">Powered By :</string>
    <string name="replace_photo">Replace Photo</string>
    <string name="replace_video">Replace Video</string>
    <string name="add_facebook">Add from Facebook</string>
    <string name="not_sure">Not sure what to upload? <font color="#06B8A1"><b><u>Check out our guidelines</u></b></font></string>
    <string name="add_more">Add More Photos</string>
    <string name="more_photo">More Photos</string>
    <string name="more_photos">Profiles with 6 or more photos are 57% more likely to get a match. You can change this later.</string>
    <string name="drag">Drag to order</string>
    <string name="when_birthday">When Is Your Birthday?</string>
    <string name="choose_right">Choose the right date to get \naccurate match</string>
    <string name="this_cant">This can\'t be changed later</string>
    <string name="make_sure">Make sure this is your correct age \nas you can\'t change this later\n</string>
    <string name="cancel">Cancel</string>
    <string name="user_not">The scanned profile QR code is invalid. Please verify and try again.</string>
    <string name="done">Done</string>
    <string name="how_do">How Do You Identify?</string>
    <string name="everyone">Everyone\'s welcome on Radar!</string>
    <string name="women">Woman</string>
    <string name="man">Man</string>
    <string name="couple">Couple</string>
    <string name="non_binary">Non Binary</string>
    <string name="interest_in">Who Are You \nInterested In?</string>
    <string name="you_can">You can change this later</string>
    <string name="interst_in_man">I\'m interested in Men</string>
    <string name="interst_in_woman">I\'m interested in Women</string>
    <string name="interst_in_couple">I\'m interested in Couples</string>
    <string name="interst_in_non_binary">I\'m interested in Non Binary</string>
    <string name="interst_in_everyone">I\'m interested in Everyone</string>
    <string name="what_email">What\'s Your Email\nAddress?</string>
    <string name="we_use">We use this to secure your account \nby recovering if you can\'t log in.</string>
    <string name="your_email">Your Email</string>
    <string name="enter_email">Enter your email address</string>
    <string name="get_start">Get Started</string>
    <string name="screen_one">Meet In Person</string>
    <string name="screen_one_des">Connect with singles who you meet in person, we will be your Wingman. Too shy to make a move? We help you get creative.</string>
    <string name="screen_three">Meet Online</string>
    <string name="screen_three_des">For the paths which haven\'t crossed yet - discover &amp; connect with singles in our search feature!</string>
    <string name="screen_four">See Who Likes You</string>
    <string name="screen_four_des">Trust us - there\'s someone out there for everyone! If they happen to find you first, this is where they\'ll be patiently waiting!</string>
    <string name="screen_five">Talk To Your Connections</string>
    <string name="screen_five_des">QR Cards provide an alternative to handing out your phone number to every ”hottie” who crosses your path. Connect in various ways &amp; chat safely through our platform</string>
    <string name="screen_six">More Than a Dating App</string>
    <string name="screen_six_des"><![CDATA[RadarQR is for singles who want to connect both online and in REAL life. We know that when someone is ”on your Radar”, you know it. You can fell it. We work to empower singles to ”find their bold” and make real moves.]]></string>
    <string name="screen_two">Invite to Your Profile</string>
    <string name="got_it">Got it</string>
    <string name="empowers">Radar Empowers Singles to Make the First Move</string>
    <string name="different">How are we different?\nWith Radar you can:</string>
    <string name="point1">1. Meet people in person and give them your QR card or let them scan your QR code to instantly connect without providing your personal information. It’s safe, secure, &amp; fun!</string>
    <string name="point2">2. Browse local singles and select the people that you want to meet.</string>
    <string name="before_use">Before You Use This App</string>
    <string name="before_use_des">Welcome! We\'re excited to be apart of you love journey \n\nHere we treat everyone with kindness and respect, no matter their race, religion, nationality, ethnicity, skin color, ability, size, sex, gender identity, or sexual orientation.\n\nIn our mission are to actively keep <font color="#06B8A1">Radar</font>. safe and inclusive, we ask you to join us by signing to our <font color="#06B8A1"><u>guidelines</u></font>.</string>
    <string name="with_love">With Huge Love,</string>
    <string name="radar_team">Radar Team</string>
    <string name="agree">I agree</string>
    <string name="forword">Forward this profile to a friend </string>
    <string name="text_profile">Text Profile</string>
    <string name="email_profilee">Email Profile</string>
    <string name="forword_text">Remember: Please be polite. It took a lot of courage to give you my information. History rewards the bold!</string>
    <string name="aws_image_path_url_full">https://%1$s.amazonaws.com/%2$s</string>
    <string name="aws_image_path_url_medium">https://%1$s.amazonaws.com/%2$s</string>
    <string name="aws_image_path_url_thumb">https://%1$s.amazonaws.com/%2$s</string>
    <string name="s3_bucket"> radar-profile-images.s3.us-east-2</string>
    <string name="find_replace">Find a Replacement</string>
    <string name="upload">Upload Photo</string>
    <string name="connections">Connections</string>
    <string name="add_media">Add Media</string>
    <string name="take">Camera</string>
    <string name="capture_video">Take Video</string>
    <string name="gallery">Gallery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sometime">Sometimes</string>
    <string name="open">Open to all</string>
    <string name="require">Is This A Requirement?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="show_scan_qr">Scan or show Radar QR Code</string>
    <string name="share_profile">Share Profile</string>
    <string name="preference">Preferences</string>
    <string name="account">Account</string>
    <string name="help">Help Center</string>
    <string name="logout">Logout</string>
    <string name="drag_to">Drag to change order</string>
    <string name="my_photo">My Photos &amp; Videos</string>
    <string name="about_me">About Me</string>
    <string name="basic_info">Basic Info</string>
    <string name="work_edu">Work &amp; Education</string>
    <string name="hobby_inter">Hobbies &amp; Interests</string>
    <string name="my_general">General</string>
    <string name="my_preference">My Preferences</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="hight">Height</string>
    <string name="location">Location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleting_your_account_will_permanently_erase_convos_with_your_connections">Are you sure you want to delete your account from RadarQR. This will delete all the details associated with your account. It includes your pictures, profile info and all matches.</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="not_now">Not now</string>
    <string name="my_hobbies_amp_interest"><![CDATA[My Hobbies & Interests]]></string>
    <string name="choose_up_to_5_interests_fr_your_profile">Choose up to 5 interests for your profile</string>
    <string name="skip_without_underline">Skip</string>
    <string name="enable">Enable</string>
    <string name="enable_location">Enable Location</string>
    <string name="help_us_help_you_if_your_location_is_nenabled_we_can_better_link_you_to_others_nwithin_your_location_preferences">Help us help you! If your location is\nenabled, we can better link you to others\nwithin your location preferences.</string>
    <string name="thank_you">Thank you</string>
    <string name="welcome_to_radarqr">Welcome + Tips</string>
    <string name="welcome_message">We\'re thrilled to introduce our innovative dating app, RadarQR. As we\'re still in the early stages, there may be some technical issues we encounter along the way. We appreciate your patience as we correct them and grow. To help you make the most of this new platform, here are some tips:</string>
    <string name="share_your_profile_qr_code_to_match_on_nthe_go_check_out_our_swag_shop_for_ninspiration_and_orders">Invite singles to your profile by sharing your profile QR code! (Visit the SWAG SHOP for inspiration).</string>
    <string name="go_to_hot_spots_to_be_where_the_nsingles_are_amp_learn_who_they_are_once_nyou_check_in">Add Close Friends to play matchmaker with friends in tagged venue photos!</string>
    <string name="play_matchmaker_amp_tag_your_close_friends_nin_hot_spots_turn_dating_into_a_fun_nsocial_experience">Visit “Hot Spots” to immerse yourself in a room full of singles on the spot!</string>
    <string name="browse_albums_in_hot_spots_to_discover_nnew_singles_who_are_tagged_in_the_photos">Browse Albums in “Hot Spots” to discover\nnew singles who are tagged in venue\nphotos.</string>
    <string name="remember_have_fun_stay_safe_and_enjoy_nthis_revolutionary_dating_experience">Remember to have fun, stay safe, and\nenjoy this groundbreaking dating\nexperience!</string>
</resources>