<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/rect_white_age"
        android:minWidth="@dimen/_250sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hkgrotesk_bold"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:fontFamily="@font/hkgrotesk_regular"
            android:text="@string/deleting_your_account_will_permanently_erase_convos_with_your_connections"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_now_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:text="@string/not_now"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_teal_fill"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:padding="@dimen/_10sdp"
                android:text="@string/confirm_delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</layout>