<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_enable_location_screen_image"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/Widget.Radar.Text.Content.Bold"
            android:text="@string/enable_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Widget.Radar.Text"
            android:gravity="center"
            android:text="@string/help_us_help_you_if_your_location_is_nenabled_we_can_better_link_you_to_others_nwithin_your_location_preferences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEnable"
            style="@style/Widget.Radar.Text.Content.SemiBold"
            android:layout_width="0dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/green_fill_rect"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/enable"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tvSkip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSkip"
            style="@style/Widget.Radar.Text.Content.Bold"
            android:text="@string/skip_without_underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
