<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <LinearLayout
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_round_white"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/Widget.Radar.Text.Bold"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/my_hobbies_amp_interest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBody"
            style="@style/Widget.Radar.Text.Body"
            android:layout_width="wrap_content"
            android:text="@string/choose_up_to_5_interests_fr_your_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHobbiesAndInterests"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/clBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBody" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_continue"
            style="@style/Widget.Radar.Text.Content.SemiBold"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/green_fill_rect"
            android:fontFamily="@font/hkgrotesk_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


</layout>
