<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/_90sdp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/tv_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/hkgrotesk_medium"
            android:text="@string/upload"
            android:textColor="@color/b_text_light"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/progress_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_find" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/hkgrotesk_semibold"
            android:gravity="center"
            android:text="@string/take"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />
        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/hkgrotesk_semibold"
            android:gravity="center"
            android:text="@string/capture_video"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_camera" />
        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:drawableLeft="@drawable/ic_gallery"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/hkgrotesk_semibold"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_video" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>